fixed word wrap for code elements

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -116,6 +116,7 @@ blockquote{
 }
 
 code{
+	word-wrap: break-word;
 	background-color: rgba(black, 0.05);
 }
 
